# graphlow

./: .gitignore  .gitlab-ci.yml  Makefile  README.md  pyproject.toml
.github/workflows/: deploy.yml
docs/source/: changelog.rst  conf.py  index.rst
docs/source/quickstart/: index.rst
src/graphlow/: __init__.py
src/graphlow/base/: dict_tensor.py  mesh.py  mesh_interface.py  tensor.py  tensor_property.py
src/graphlow/io/: io.py
src/graphlow/processors/: geometry_processor.py  graph_processor.py  isoAM_processor.py
src/graphlow/util/: array_handler.py  cache.py  constants.py  enums.py  log_config.yaml  logger.py  typing.py
tests/: conftest.py  logging_config.py
tests/benchmark/: test_memory.py  test_time.py
tests/data/benchmark_mesh/surfaces/: 100x100_000.vtu  100x100_010.vtu  100x100_020.vtu  100x100_030.vtu  100x100_040.vtu  100x100_050.vtu  100x100_060.vtu  100x100_070.vtu  100x100_080.vtu  100x100_090.vtu  100x100_100.vtu
tests/data/benchmark_mesh/volumes/: 100x100_000.vtu  100x100_010.vtu  100x100_020.vtu  100x100_030.vtu  100x100_040.vtu  100x100_050.vtu  100x100_060.vtu  100x100_070.vtu  100x100_080.vtu  100x100_090.vtu  100x100_100.vtu
tests/data/vtp/complex_surface/: mesh.vtp
tests/data/vtp/openedge_surface/: openedge_surface.vtp
tests/data/vts/cube/: mesh.vts
tests/data/vtu/complex/: mesh.vtu  surface.vtu
tests/data/vtu/cube/: large.vtu  small.vtu
tests/data/vtu/openedge/: openedge.vtu
tests/data/vtu/primitive_cell/: cube.vtu  cuboid.vtu  hex.vtu  octahedron.vtu  poly.vtu  pyramid.vtu  tet.vtu  wedge.vtu
tests/test_base/: test_mesh.py
tests/test_processors/: test_geometry_processor.py  test_graph_processor.py  test_isoAM_processor.py
tutorials/: GALLERY_HEADER.rst  gradient.py  shape_optimization.py
