[tool.poetry]
name = "graphlow"
version = "0.0.1"
description = "graphlow provides graph processing features for physical simulation data (e.g., mesh)."

authors = ["RICOS Co. Ltd."]
readme = "README.md"
license="Apache-2.0"
packages = [
    {include = "graphlow", from = "src"}
]

[tool.poetry.dependencies]
python = "^3.10"
vtk = "9.3.1"
pyvista = "^0.43"
scipy = "^1.14.0"
torch = {version = "^2.6.0", source = "torch_cu124"}
torchvision = {version = "^0.21.0", source = "torch_cu124"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
pytest-cov = "^4.1.0"
pytest-benchmark = "^5.1.0"
pytest-memray = "^1.7.0"
ruff = "^0.9.6"
mypy = "^1.8.0"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.6"
furo = "^2024.8.6"
sphinx-fontawesome = "^0.0.6"
sphinx-gallery = "^0.17.0"
sphinx-copybutton = "^0.5.2"
sphinx-design = "^0.6.1"
ipykernel = "^6.29.5"
trame = "^3.8.0"
trame-vtk = "^2.8.15"
trame-vuetify = "^2.8.1"
imageio = "^2.37.0"


[[tool.poetry.source]]
name = "torch_cu124"
url = "https://download.pytorch.org/whl/cu124"
priority = "explicit"

[tool.pytest.ini_options]
markers = [
    "with_benchmark: Run test with the --benchmark-autosave option",
    "with_memray: Run test with the --memray option",
]
addopts = [
    "--import-mode=importlib",
    "-m",
    "not with_benchmark and not with_memray",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
src = ["src", "tests"]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "docs"
]

# Same as Black.
line-length = 80
indent-width = 4

# Assume Python 3.10
target-version = "py310"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ANN", # flake8-annotations
]
ignore = ["ANN003", "ANN204"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.flake8-annotations]
suppress-none-returning = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"src/graphlow/base/**/*.py" = ["ANN401"]
"tests/conftest.py" = ["ANN001"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[tool.coverage.report]
ignore_errors = false
show_missing = true
# Regexes for lines to exclude from consideration
exclude_also = [
    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
]